<resources>
    <string name="app_name">通讯之家</string>
    <string name="shouye">首页</string>
    <string name="shipin">视频</string>
    <string name="shangcheng">商城</string>
    <string name="liaotian">聊天</string>
    <string name="wode">我的</string>
    <string name="sousuonixihuandeshangpin">搜索你喜欢的商品</string>
    <string name="sousou">搜索</string>
    <string name="qingcang">清仓</string>
    <string name="dashuaimai">大甩卖</string>
    <string name="pindan">拼单</string>
    <string name="haowudijiagou">好物低价购</string>
    <string name="shipintuijian">视频推荐</string>
    <string name="remaichanpin">热卖产品</string>
    <string name="zuixinjishu">最新技术</string>
    <string name="haohuoqingbuting">好货抢不停</string>
    <string name="jishushipin">技术视频</string>
    <string name="zhuanfamianfei">转发\n免费</string>
    <string name="gengduojishishiopin">更多技术视频</string>
    <string name="huanyipi">换一批</string>
    <string name="tianxiapeijianpifa">天下配件批发</string>
    <string name="haopinglvbai">好评率100%</string>
    <string name="guanzhudedianzhu">我的关注</string>
    <string name="wodeshoucang">我的收藏</string>
    <string name="xihuandeshipin">喜欢的视频</string>
    <string name="wodeqianbao">我的钱包</string>
    <string name="shangchengdingdan">商城订单</string>
    <string name="chankanquanbudingdan">查看全部订单</string>
    <string name="daifukuai">待付款</string>
    <string name="daifahuo">待发货</string>
    <string name="daishouhuo">待收货</string>
    <string name="daipingjia">待评价</string>
    <string name="shouhoutuikuan">售后/退款</string>
    <string name="wodeshangpin">我的商品</string>
    <string name="womaichude">我的卖出</string>
    <string name="wodeshipin">我的视频</string>
    <string name="guankanlishi">观看历史</string>
    <string name="yaoqingtonghang">邀请同行</string>
    <string name="shimingrenzheng">实名认证</string>
    <string name="VIPtequan">VIP特权</string>
    <string name="gaijinjianyi">改进建议</string>
    <string name="fuwuzhongxin">服务中心</string>
    <string name="huihuajilu">会话记录</string>
    <string name="tongxunlu">通讯录</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="wangjimima">忘记密码？</string>
    <string name="fasongyanzhengma">发送验证码</string>
    <string name="zhucetishi">*注册代表您同意</string>
    <string name="zhucexieyi">《用户协议》</string>
    <string name="queding">确定</string>
    <string name="qingshurushangpinbiaoti">请输入商品标题</string>
    <string name="sahngpinfenlei">商品分类</string>
    <string name="kuaidifangshi">快递方式</string>
    <string name="shangpinjieshao">商品介绍</string>
    <string name="quedingfabu">确定发布</string>
    <string name="dianjishangchuantupian">点击上传图片</string>
    <string name="jiage">价格</string>
    <string name="kucun">库存</string>
    <string name="querentianjia">确认添加</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
</resources>
