<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dise"
    tools:context=".wode.activity.AddSmallShangpinActivity">
    <include layout="@layout/title" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:id="@+id/mLnaddSp_img"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/xiaoxiangji"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="@color/c999999"
                android:text="@string/dianjishangchuantupian"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/mIvaddsmall_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/mEtaddsmall_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:hint="@string/qingshurushangpinbiaoti"
            android:gravity="top"
            android:textSize="@dimen/text_12"
            android:padding="10dp" />
        <TextView
            android:id="@+id/mTvaddSp_namenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_9"
            android:text="0/60"
            android:maxLength="60"
            android:textColor="@color/c999999"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0.5dp"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/c333333"
            android:layout_gravity="center"
            android:text="@string/jiage"/>
        <EditText
            android:id="@+id/mEtaddsmall_jiage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:singleLine="true"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_14"
            android:textColor="@color/c333333"
            android:gravity="right"
            android:inputType="number"
            android:hint="请输入价格"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/c333333"
            android:textSize="@dimen/text_14"
            android:text="￥"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0.5dp"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/c333333"
            android:layout_gravity="center"
            android:text="@string/kucun"/>
        <EditText
            android:id="@+id/mEtaddsmall_kucun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:singleLine="true"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_14"
            android:textColor="@color/c333333"
            android:gravity="right"
            android:inputType="number"
            android:hint="请输入库存"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/c333333"
            android:textSize="@dimen/text_14"
            android:text="￥"
            android:visibility="invisible"
            android:layout_gravity="center"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/mRladdsmall_queding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/loginqueding"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_17"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/querentianjia">

        </TextView>
    </RelativeLayout>
</LinearLayout>