<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_above="@id/mLnmain_top" />
    <FrameLayout
        android:id="@+id/mFlmain_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_weight="1">

    </FrameLayout>
    <LinearLayout
        android:id="@+id/mLnmain_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mTvmain_top"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/logos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/yjbaisetouquan"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/sousuo" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:visibility="gone"
                    android:hint="@string/sousuonixihuandeshangpin"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/text_10" />
            </LinearLayout>

            <ImageView
                android:id="@+id/mIvmain_jia"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/jiahoa" />
        </LinearLayout>
        <ImageView
            android:id="@+id/mIvmain_sanjiao"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginRight="26dp"
            android:layout_gravity="right"
            android:visibility="gone"
            android:src="@mipmap/baisanjiao"/>
        <LinearLayout
            android:id="@+id/mLnmain_tan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:layout_marginRight="13dp"
            >

          <TextView
              android:id="@+id/mTvmain_tanshipin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:layout_gravity="center"
              android:text="发视频"
              android:textColor="@color/c333333"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c999999"/>
            <TextView
                android:id="@+id/mTvmain_tanchanpin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="产品"
                android:layout_gravity="center"
                android:textColor="@color/c333333"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c999999"/>
            <TextView
                android:id="@+id/mTvmain_tansan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="加工"
                android:layout_gravity="center"
                android:textColor="@color/c333333"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c999999"/>
            <TextView
                android:id="@+id/mTvmain_tansi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="维修"
                android:textColor="@color/c333333"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/c999999"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
<LinearLayout
    android:id="@+id/mLnmain_shouye"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/mIvmain_shouye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:src="@mipmap/mainshouye"/>
    <TextView
        android:id="@+id/mTvmain_shouye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/zhuse"
        android:text="@string/shouye"
        android:textSize="@dimen/text_12"/>
</LinearLayout>
        <LinearLayout
            android:id="@+id/mLnmain_shipin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mIvmain_shipin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@mipmap/mainshipin"/>
            <TextView
                android:id="@+id/mTvmain_shipin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/c666666"
                android:text="@string/shipin"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mLnmain_shangcheng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mIvmain_shangcheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@mipmap/mainshangcheng"/>
            <TextView
                android:id="@+id/mTvmain_shangcheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/c666666"
                android:text="@string/shangcheng"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

      <TextView
          android:id="@+id/main_xiaoqinum"
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:background="@drawable/yjzhusequand"
          android:textColor="@color/white"
          android:textSize="5sp"
          android:visibility="invisible"
          android:gravity="center"
          android:layout_alignParentRight="true"
          android:layout_marginRight="20dp"/>
        <LinearLayout
            android:id="@+id/mLnmain_liaotian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mIvmain_liaotian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@mipmap/mainliaotian"/>
            <TextView
                android:id="@+id/mTvmain_liaotian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/c666666"
                android:text="@string/liaotian"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/mLnmain_wode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mIvmain_wode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@mipmap/mainwode"/>
            <TextView
                android:id="@+id/mTvmain_wode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/c666666"
                android:text="@string/wode"
                android:textSize="@dimen/text_12"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>