<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".wode.fragment.ZhuCeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/loginshouji"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/mEvzhuce_shoujihao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/text_15"
                android:hint="请输入手机号"
                android:lines="11"
                android:inputType="phone"
                android:textCursorDrawable="@null"
                android:paddingLeft="10dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/cFFD4D4D4"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/loginsuo"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/mEvzhuce_mima"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/text_15"
                android:hint="请输入密码（6-16位数字字母组合）"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:paddingLeft="10dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/cFFD4D4D4"
            /></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/loginsuo"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/mEvzhuce_mimas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/text_15"
                android:hint="请确认密码"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:paddingLeft="10dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/cFFD4D4D4"
            /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/yanzhengma"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mEvzhuce_yanzhengma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/text_15"
                android:hint="请输入验证码"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:paddingLeft="10dp"/>

        </LinearLayout>
<TextView
    android:id="@+id/mTvzhuce_yanzhengma"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/zhuse"
    android:textColor="@color/white"
    android:textSize="@dimen/text_15"
    android:text="@string/fasongyanzhengma"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:padding="5dp"/>
      </LinearLayout>
    <RelativeLayout
        android:id="@+id/mLnzhuce_zhuce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/loginqueding"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_17"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/zhuce"></TextView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/zhucetishi"
        android:textColor="@color/c333333"
        android:textSize="@dimen/text_14"/>
        <TextView
            android:id="@+id/mTvzhuce_zhucexieyi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/zhucexieyi"
            android:textColor="@color/zhuse"
            android:textSize="@dimen/text_14"/>
    </LinearLayout></LinearLayout></ScrollView>
</LinearLayout>